test with selenium
git-svn-id: http://selenium.rubyforge.org/svn/trunk@9 ed7eda33-4b9a-41fc-af1f-e75b3c93d7ee

--- a/site_template.html
+++ b/site_template.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-		<div class="header"><a class="header"><template:href url="."/><img id="logo" alt="cotta"><template:href url="logo1.gif"/></img></a></div>
+		<div class="header"><a id="home" class="header"><template:href url="."/><img id="logo" alt="cotta"><template:href url="logo1.gif"/></img></a></div>
 
 		<div class="left">
       <div class="MenuGroup">
