website update, added more widet classes and copied server manager from build master
git-svn-id: svn+ssh://rubyforge.org/var/svn/selenium/trunk@11 ed7eda33-4b9a-41fc-af1f-e75b3c93d7ee

--- a/site_template.html
+++ b/site_template.html
@@ -3,6 +3,7 @@
   <head>
     <title>Selenium Ruby - <template:include elements="/html/head/title/text()"/></title>
     <link rel="stylesheet" type="text/css"><template:href url="cotta.css"/></link>
+    <link rel="stylesheet" type="text/css"><template:href url="ruby.css"/></link>
     <template:include elements="/html/head/*[not(name()='title')]"/>
   </head>
 
@@ -23,7 +24,7 @@
         <h1>Documentation</h1>
         <ul>
           <li><a><template:href url="getting-started.html"/>Getting Started</a></li>
-          <li><a><template:href url="document.html"/>Cotta Document</a></li>
+          <li><a><template:href url="document.html"/>Document</a></li>
           <li><a><template:href url="references.html"/>References</a></li>
         </ul>
       </div>
