--- a/site_template.html
+++ b/site_template.html
@@ -32,8 +32,8 @@
       <div class="MenuGroup">
         <h1>User Support</h1>
         <ul>
-          <li><a><template:href url="http://sourceforge.net/forum/?group_id=171037"/>Forum</a></li>
-          <li><a><template:href url="http://sourceforge.net/tracker/?group_id=171037&atid=856430"/>Bug Tracker</a></li>
+          <li><a><template:href url="http://groups.google.com/group/selenium-ruby"/>Mailing List</a></li>
+          <li><a><template:href url="http://rubyforge.org/tracker/?group_id=2789"/>Bug Tracker</a></li>
         </ul>
       </div>
 
@@ -41,7 +41,7 @@
         <h1>Development</h1>
         <ul>
           <li><a><template:href url="contribute.html"/>How to Contribute</a></li>
-          <li><a href="http://sourceforge.net/project/memberlist.php?group_id=171037">Development Team</a></li>
+          <li><a href="http://rubyforge.org/project/memberlist.php?group_id=2789">Development Team</a></li>
         </ul>
       </div>
       <div class="logo">
