added go behavior and introduced super WebPage and SeleniumRubyPage
git-svn-id: svn+ssh://rubyforge.org/var/svn/selenium/trunk@25 ed7eda33-4b9a-41fc-af1f-e75b3c93d7ee

--- a/site_template.html
+++ b/site_template.html
@@ -41,7 +41,7 @@
         <h1>Development</h1>
         <ul>
           <li><a><template:href url="contribute.html"/>How to Contribute</a></li>
-          <li><a href="http://rubyforge.org/project/memberlist.php?group_id=2789">Development Team</a></li>
+          <li><a><template:href url="team.html"/>Development Team</a></li>
         </ul>
       </div>
       <div class="logo">
