more selenium action supports through webpage
git-svn-id: svn+ssh://rubyforge.org/var/svn/selenium/trunk@58 ed7eda33-4b9a-41fc-af1f-e75b3c93d7ee

--- a/site/test/index.html
+++ b/site/test/index.html
@@ -1,12 +1,20 @@
 <html>
   <head><title>Test Main Page</title></head>
 <body>
-<h1>This is the main test page for selenium-ruby testing</h1>
-<h1>Action Tests</h1>
+<h1>Testing</h1>
+<p>This is the main test page for selenium-ruby testing</p>
+<h2>Action Tests</h2>
 This section test all the action methods.
 <form action="index.html">
 <h2>Double Click</h2>
- <textarea name="doubleclick" onDblClick="alert('double clicked with value ' + this.form.doubleclick.value)" rows="10">test</textarea>
+ <textarea id="doubleclickid" name="doubleclick"
+           onDblClick="alert('double clicked with value ' + this.form.doubleclick.value)"
+           onBlur="alert('blurred with value ' + this.form.doubleclick.value)"
+           rows="10">test</textarea>
+<h2>Events</h2>
+<input name="events" onblur="alert('blurred with value ' + this.form.events.value)"
+    onfocus="this.form.events.value = 'default'"/>
 </form>
+
 </body>
 </html>
