--- a/site/test/index.html
+++ b/site/test/index.html
@@ -16,5 +16,6 @@ This section test all the action methods.
     onfocus="this.form.events.value = 'default'"/>
 </form>
 
+<a href="../license.txt">License</a>
 </body>
 </html>
